SET(EXAMPLE_NAME "Vulkan-glTF-PBR")
file(GLOB SOURCE *.cpp ${BASE_HEADERS})
file(GLOB SHADERS "../shaders/*.vert" "../shaders/*.frag" "../shaders/*.comp" "../shaders/*.geom" "../shaders/*.tesc" "../shaders/*.tese")
file(GLOB SHADER_INCLUDES "../shaders/includes/*.glsl")
source_group("Shaders" FILES ${SHADERS})
source_group("Shaders\\Includes" FILES ${SHADER_INCLUDES})
if(WIN32)
	add_executable(${EXAMPLE_NAME} WIN32 ${MAIN_CPP} ${SOURCE} ${SHADERS} ${SHADER_INCLUDES})
	target_link_libraries(${EXAMPLE_NAME} base ${Vulkan_LIBRARY} ${WINLIBS})
else(WIN32)
	add_executable(${EXAMPLE_NAME} ${MAIN_CPP} ${SOURCE} ${SHADERS} ${SHADER_INCLUDES})
	target_link_libraries(${EXAMPLE_NAME} base )
endif(WIN32)
if(RESOURCE_INSTALL_DIR)
	install(TARGETS ${EXAMPLE_NAME} DESTINATION ${CMAKE_INSTALL_BINDIR})
endif()